# stick

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  loading.tsx  styles.css
apps/web/src/app/api/assets/[file]/: route.ts
apps/web/src/app/api/feed/launches/: route.ts
apps/web/src/app/api/feed/ticker/: route.ts
apps/web/src/app/api/sponsor/: route.ts
apps/web/src/app/create/: page.tsx
apps/web/src/app/favicon.ico/: route.ts
apps/web/src/app/how-it-works/: page.tsx
apps/web/src/app/launch-project/: page.tsx
apps/web/src/app/presale/[id]/: loading.tsx  page.tsx
apps/web/src/app/tokens/: loading.tsx  page.tsx
apps/web/src/components/: copy-mint-button.tsx  futard-header.tsx  landing-page.tsx  launch-auto-refresh.tsx  launch-console.tsx  launch-countdown.tsx  live-ticker.tsx  presale-actions.tsx  solana-providers.tsx  wallet-button.tsx
apps/web/src/hooks/: use-stick-wallet.ts
apps/web/src/lib/: db.ts  launch-feed.ts  launch-options.ts  mainnet-config.ts  onchain-contributor.ts  onchain-presale.ts  project-metadata.ts  server-secret-crypto.test.ts  server-secret-crypto.ts  sol-price.ts  transaction-runner.ts
idl/: fair_launchpad.json
infra/postgres/: 001_init.sql
programs/fair_launchpad/: Cargo.toml
programs/fair_launchpad/src/: lib.rs
services/keeper/: package.json
services/keeper/src/: creatorFeeWorker.test.ts  creatorFeeWorker.ts  index.ts
tests/: local-smoke.ts  mainnet-live-smoke.ts
(+9 files in other folders)
