[package]
name = "fair_launchpad"
version = "0.1.0"
description = "Fair Pump.fun launchpad escrow and accounting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fair_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
